# cortexpulse-rag-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  prompts.yaml  pyproject.toml
app/: __init__.py  chunking.py  config.py  llm.py  main.py  models.py  news.py  pipeline.py  prompts.py  reliability.py  vector_store.py
app/static/: app.js  index.html  styles.css
data/: sample_articles.json
tests/: test_chunking.py  test_news.py  test_pipeline.py
